tests/parser/should_fail/module_assertion.csp
module M
exports
    assert STOP [T= STOP
endmodule